--- a/Day32/style.css
+++ b/Day32/style.css
@@ -1,4 +1,19 @@
 body{
     display: grid;
     place-items: center;
+    max-width: 100%;
+    background-color: #ecf0f1;
+    height: auto;
+    font-family: Urbanist;
+    font-weight: bold;
+    letter-spacing: 0.1rem;
+}
+
+.tabs{
+    display: flex;
+    gap: 3.2rem;
+    text-transform: uppercase;
+    cursor: pointer;
+    list-style: none;
+    margin-bottom: 3.2rem;
 }
